k8s/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: pal-tracker
spec:
  type: ClusterIP
  selector:
     app: pal-tracker
  ports:
   - port: 8080
